Fix layout bug

--- a/themes/maize/sass/layout/_about.scss
+++ b/themes/maize/sass/layout/_about.scss
@@ -3,7 +3,7 @@
 .about {
     display: flex;
     flex-direction: column-reverse;
-    max-height: 650px;
+    // max-height: 650px;
 
     @include MQ(XS) {
         flex-direction: row;
@@ -32,7 +32,7 @@
             letter-spacing: 0.085rem;
             line-height: 2.2rem;
             padding: 70px 45px;
-            
+
 
             @include MQ(XS) {
                 font-size: 1.3rem;
