--- a/themes/maize/sass/modules/_online-shop-links.scss
+++ b/themes/maize/sass/modules/_online-shop-links.scss
@@ -22,7 +22,7 @@ $online-shop-link-breakpoint: 768px !default;
         height: 44px;
         line-height: 44px;
         font-size: 12px;
-        font-family: Helvetica;
+        font-family: $font-medium;
         letter-spacing: .75px;
         text-align: center;
         text-transform: uppercase;
